--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
+name: n_bonnie2
 page.title: BonSite - n_bonnie2’s Website
-title: BonSite
+title: BonSite - n_bonnie2’s Website
 description: >- # this means to ignore newlines until "baseurl:"
- BonSite - n_bonnie2’s Website - The centerplace of n_bonnie2’s Info, Socials, and Permissions.
+ n_bonnie2’s Website - The centerplace of n_bonnie2’s Info, Socials, and Permissions.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: n_bonnie2
+github_username:  underscorebon
+
 
 # Build settings
 plugins:
