--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: n_bonnie2
 github_username:  underscorebon
 
+# plane database bullcrap
+# value = display
+# key = link
+
 
 # Build settings
 plugins:
