--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-name: BonSite - n_bonnie2’s Website
-page.title: BonSite - n_bonnie2’s Website
-title: BonSite - n_bonnie2’s Website
+name: n_bonnie2’s Website
+page.title: n_bonnie2’s Website
+title: n_bonnie2’s Website
 description: >- # this means to ignore newlines until "baseurl:"
- The centerplace of n_bonnie2’s Info, Socials, and Permissions.
+ aka BonSite, The centerplace of n_bonnie2’s Info, Socials, and Permissions.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: n_bonnie2
